--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,7 +7,7 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item">By Rating</a>
                 <a href="" class="dropdown-item">By Catagory</a>
-                <a href="" class="dropdown-item">By Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">By Products</a>
             </div>
         </li>
 
