Added quantity boxes to shopping bag page

--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,4 +1,4 @@
-<script>
+<script type="text/javascript">
 
     // Diable +/- buttons outside 1-99 range
     function handleEnableDisable(itemId) {
